[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toinstance"
version = "0.0"
authors = [{name = "Tassilo Wald", email = "tassilo.wald@dkfz-heidelberg.de"}]
description = "Takes basic semantic segmentation (e.g. output of nnU-Net) and creates instances of it."
dependencies = [
    'nibabel~=5.2.0',
    'numpy~=1.26.3',
    'scikit-image~=0.21.0',
    'SimpleITK',
    'tqdm',
    'pynrrd',
]


readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU GENERAL PUBLIC LICENSE",
    "Operating System :: OS Independent",
]


[tool.black]
line-length = 118

[project.urls]
"Homepage" = "https://git.dkfz.de/mic/personal/group2/all/toinstance"

[project.scripts]
toinstance = "toinstance.predict:main"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# [project.scripts]
# my-script = "sem2ins.scripts.evaluate:main"